[package]
name = "cryptocurrency-advanced"
version = "0.1.0"
authors = ["XX <freecoder.xx@gmail.com>"]
edition = "2018"

[dependencies]
exonum = "0.10.3"
exonum-derive = "0.10.0"
exonum-configuration = "0.10.1"
serde = "1.0.90"
serde_derive = "1.0.90"
failure = "0.1.5"
protobuf = "2.5.0"

[dev-dependencies]
exonum-configuration = "0.10.2"
serde_json = "1.0.39"
assert_matches = "1.3.0"
exonum-testkit = "0.10.2"

[build-dependencies]
exonum-build = "0.10.0"

[features]
default = ["with-serde"]
with-serde = []